<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@drawable/img_splash"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20.0sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/appName"
            android:paddingTop="7.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:text="@string/title" />
        <TextView
            android:textSize="16.0sp"
            android:textColor="#ff86a9a8"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/appNameExtra"
            android:paddingLeft="4.0dip"
            android:paddingTop="2.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="6.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip" />
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:src="@drawable/logo"
            android:contentDescription="@string/about_logo_content_description" />
        <TextView
            android:textSize="15.0sp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="4.0dip"
            android:paddingTop="10.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="6.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:text="@string/copyright1" />
        <Button
            android:textSize="17.0sp"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/eula"
            android:background="@drawable/selector_transparent_gray"
            android:padding="6.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="0.0dip"
            android:minWidth="128.0dip"
            android:text="@string/view_licenses" />
    </LinearLayout>
</ScrollView>