<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"

        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:background="@drawable/button_shape"
                android:visibility="invisible"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                  android:background="@color/colorAccent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp">

                        <com.annam.annamownernew.customfonts.MyTextViewHead
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="Change Password"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <com.annam.annamownernew.customfonts.MyTextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"

                            android:gravity="center"
                            android:text="Do you want to change your password??"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <com.annam.annamownernew.customfonts.MyEditText
                    android:id="@+id/edt_change_old_pasfeild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/oldpassword"
                    android:inputType="textPassword"
                    android:padding="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.annam.annamownernew.customfonts.MyEditText
                    android:id="@+id/edt_change_newfeild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.annam.annamownernew.customfonts.MyEditText
                    android:id="@+id/edt_change_confmfeild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:singleLine="true" />


            </LinearLayout>
            <Button
                android:id="@+id/btn_change_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:text="@string/ok"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>


    </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

android:layout_alignParentBottom="true"

            android:gravity="right"
            android:orientation="horizontal">


            <!--<Button-->
                <!--android:id="@+id/btn_change_ok"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
               <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
                <!--android:padding="10dp"-->
                <!--android:text="@string/ok"-->
                <!--android:background="@color/button_color"-->
                <!--android:textColor="#ffffff"-->
                <!--android:textStyle="bold" />-->
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>